--- a/vertical.html
+++ b/vertical.html
@@ -110,9 +110,14 @@
 
     weakOrders.forEach(weakOrder => {
       weakOrder.addEventListener('dragover', e => {
-        e.preventDefault()
-
+        
         const item = document.querySelector('.dragging');
+
+        // check if item can be dropped here (originates from the same weak order)
+        if (!item.parentElement || !item.parentElement.parentElement || item.parentElement.parentElement !== weakOrder) {
+          return;
+        }
+        e.preventDefault()
 
         const indifferenceClasses = [...weakOrder.querySelectorAll('.indifference-class')];
 
