--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       const classes = [...weakOrder.querySelectorAll('.indifference-class')];
 
       let nextClass = classes.find(elem => {
-        return x <= elem.offsetLeft + elem.offsetWidth;
+        return x <= elem.getBoundingClientRect().left + elem.getBoundingClientRect().width;
       });
 
       if (!nextClass) {
@@ -283,7 +283,7 @@
       const items = [...indifferenceClass.querySelectorAll('.item:not(.dragging)')];
 
       let nextItem = items.find(item => {
-        return x <= item.offsetLeft + item.offsetWidth / 2;
+        return x <= item.getBoundingClientRect().left + item.getBoundingClientRect().width / 2;
       });
 
       return nextItem;
@@ -393,7 +393,7 @@
       const classes = [...weakOrder.querySelectorAll('.v-indifference-class')];
 
       let nextClass = classes.find(elem => {
-        return y <= elem.offsetTop + elem.offsetHeight;
+        return y <= elem.getBoundingClientRect().top + elem.getBoundingClientRect().height;
       });
 
       if (!nextClass) {
@@ -407,7 +407,7 @@
       const items = [...indifferenceClass.querySelectorAll('.v-item:not(.v-dragging)')];
 
       let nextItem = items.find(item => {
-        return x <= item.offsetLeft + item.offsetWidth / 2;
+        return x <= item.getBoundingClientRect().left + item.getBoundingClientRect().width / 2;
       });
 
       return nextItem;
